# OBS-TouchOSC

./: .gitignore  Readme.md  build.ps1  build.sh  installer.nsis  pyproject.toml
TouchOSC Patches/: obs.touchosc  obs_iphone.touchosc
src/obs/: service.py
src/osc/: server.py
src/windows/: main.py
